# MaatChessEngine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile.in  README.md  conanfile.py  setup.bat
cmake/: compiler_warnings.cmake
include/chessengine/: chess_engine.h  config.h  engine.h  evaluation.h  logger.h  minimax.h  move_ordering.h  search.h  search_stats.h  test_engine.h  types.h  uci_adapter.h  uci_engine.h
src/: CMakeLists.txt  main.cpp
src/app/: engine.cpp  engine.h  main.cpp  uci.cpp  uci.h
src/chessengine/: chess_engine.cpp  config.cpp  config.h  engine.cpp  evaluation.cpp  logger.cpp  minimax.cpp  move_ordering.cpp  search.cpp  search_stats.cpp  test_engine.cpp  types.cpp  uci_adapter.cpp  uci_engine.cpp
test/: .clang-tidy  CMakeLists.txt
test/check_in_x_test/: CMakeLists.txt
test/mate_in_x_test/: CMakeLists.txt  Readme.md
test/mate_in_x_test/src/: lichess_converter.cpp  lichess_converter.h  main.cpp  mate_in_x.cpp  mate_in_x.h  multi_solution_finder.cpp  multi_solution_finder.h  multiple_solution_finder.cpp
test/unit/: CMakeLists.txt
test/unit/src/: depth_test.cpp  evaluation_test.cpp  score_test.cpp  uci_engine_construct_position_test.cpp  uci_engine_position_cb_test.cpp  uci_engine_test.cpp
